<resources>
    <string name="title_add">添加好友</string>
    <string name="title_modefy">修改好友信息</string>
    <string name="name_info">好友信息</string>

    <string name="app_name">Friends_management</string>
    <string name="friend_list">好友列表</string>
    <string name="friend_add">添加好友</string>
    <string name="friend_name">姓名</string>
    <string name="friend_gender">性别</string>
    <string name="friend_gender_male">男</string>
    <string name="friend_gender_female">女</string>
    <string name="friend_birthday">生日</string>
    <string name="friend_hobby">爱好</string>
    <string name="friend_hobby_of_1">电影</string>
    <string name="friend_hobby_of_2">编程</string>
    <string name="friend_hobby_of_3">篮球</string>
    <string name="friend_hobby_of_4">足球</string>
    <string name="friend_hobby_of_5">游泳</string>
    <string name="friend_hobby_of_6">羽毛球</string>
    <string name="friend_hobby_of_7">绘画</string>
    <string name="friend_hobby_of_8">写作</string>
    <string name="friend_hobby_of_9">美食</string>
    <string name="friend_hobby_of_10">游戏</string>
    <string name="friend_hobby_of_11">购物</string>
    <string name="friend_hobby_of_12">阅读</string>
    <string name="friend_hobby_of_13">登山</string>
    <string name="friend_hobby_of_14">旅行</string>
    <string name="cancel_button">取消</string>
    <string name="ensure_button">确认</string>
    <string name="friend_add_done">添加完成！</string>
    <string name="friend_add_cancel">取消添加！</string>
    <string name="error_tip_1">爱好不能超过三个！！！</string>
    <string name="error_tip_2">爱好至少一个！！！</string>

    <string name="new_friend">New Friend</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d friends</string>
</resources>
