<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/name_tip"
        android:layout_width="55dp"
        android:layout_height="33dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="40dp"
        android:text="@string/friend_name"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/friend_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="28dp"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/name_tip"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/gender_tip"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="40dp"
        android:text="@string/friend_gender"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_tip" />


    <TextView
        android:id="@+id/birthday_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="40dp"
        android:text="@string/friend_birthday"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_tip" />

    <EditText
        android:id="@+id/birthday"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="date"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@+id/birthday_tip"
        app:layout_constraintTop_toBottomOf="@+id/gender" />


    <TextView
        android:id="@+id/hobby_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="40dp"
        android:text="@string/friend_hobby"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday_tip" />


    <Button
        android:id="@+id/cancel_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="32dp"
        android:text="@string/cancel_button"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ensure_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="32dp"
        android:text="@string/ensure_button"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_bt" />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/gender_tip"
        app:layout_constraintTop_toBottomOf="@+id/friend_name">

        <RadioButton
            android:id="@+id/male_rd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/friend_gender_male"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/female_rd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/friend_gender_female"
            android:textColor="@android:color/black"
            android:textSize="24sp" />
    </RadioGroup>

    <TableLayout
        android:id="@+id/Table_Layout"
        android:layout_width="306dp"
        android:layout_height="210dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobby_tip">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>


</android.support.constraint.ConstraintLayout>
